[gd_scene load_steps=2 format=3 uid="uid://nnjjw6vhbk1j"]

[ext_resource type="Script" path="res://src/HealthSystem/HealthSystem.gd" id="1"]

[node name="HealthSystem" type="Node"]
script = ExtResource("1")

[node name="ShieldTimer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="ShieldTimer" to="." method="_on_ShieldTimer_timeout"]
